Modifications and  progress on chapter 4.
Modify code-environments (no figure!) and add chapter 4 section 3 parser (not completed yet!).

--- a/TeXerei/literatur/bib.bib
+++ b/TeXerei/literatur/bib.bib
@@ -36,3 +36,51 @@ pages        = "225--228"
         howpublished = {\url{http://www.informatik.uni-kiel.de/~pakcs/lib/CDOC/Flat.html}}
 }
 
+@article{monpars,
+        author = "Graham Hutton and Erik Meijer",
+        title = "{Monadic Parsing in Haskell}",
+        journal = "Journal of Functional Programming",
+        publisher = "Cambridge University Press",
+        volume = 8,
+        number = 4,
+        year = {1998},
+        pages = "437--444"
+}
+
+@ARTICLE{applicative,
+    author = {Conor Mcbride and Ross Paterson},
+    title = {Applicative programming with effects},
+    journal = {Journal of Functional Programming},
+    year = {2007},
+    volume = {18},
+}
+
+@inproceedings{successlist,
+ author = {Wadler, Philip},
+ title = {How to replace failure by a list of successes},
+ booktitle = {Proc. of a conference on Functional programming languages and computer architecture},
+ year = {1985},
+ location = {Nancy, France},
+ pages = {113--128},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{funcpar,
+ author = {Fokker, Jeroen},
+ title = {Functional Parsers},
+ booktitle = {Advanced Functional Programming, First International Spring School on Advanced Functional Programming Techniques-Tutorial Text},
+ year = {1995},
+ isbn = {3-540-59451-5},
+ pages = {1--23},
+ numpages = {23},
+ url = {http://dl.acm.org/citation.cfm?id=647698.734153},
+ acmid = {734153},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
+} 
+
+@MISC{parsec1,
+    author = {Daan Leijen and Erik Meijer},
+    title = {Parsec: A practical parser library},
+    year = {2001}
+}
